<?xml version="1.0"?>
<package format="2">
  <name>flexible_environment</name>
  <version>0.0.0</version>
  <description>The flexible_environment package</description>

  <maintainer email="daniele.mor1998@gmail.com">Daniele Morra</maintainer>


  <author>Daniele Morra</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>gazebo_joint_torsional_spring</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>quadrotor_common</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>eigen_catkin</build_export_depend>
  <build_export_depend>gazebo_joint_torsional_spring</build_export_depend>
  <build_export_depend>mav_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>quadrotor_common</build_export_depend>
  <build_export_depend>quadrotor_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>eigen_catkin</exec_depend>
  <exec_depend>gazebo_joint_torsional_spring</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>quadrotor_common</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <depend>roslaunch</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
